add EF Model , implement MainWindow

--- a/DAN_XLII_Andreja_Kolesar/MainWindow.xaml
+++ b/DAN_XLII_Andreja_Kolesar/MainWindow.xaml
@@ -5,8 +5,89 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DAN_XLII_Andreja_Kolesar"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MainWindow"
+        Height="450"
+        Width="800">
+    <Grid Margin="0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Column="1"
+                    Grid.Row="1"
+                    Orientation="Horizontal">
+            <Button Width="100"
+                    Height="20"
+                    x:Name="btnAddEmployee"
+                    Content="Add Employee"
+                    Command="{Binding addEmployee, UpdateSourceTrigger = PropertyChanged}"
+                    Margin="20,4,4,5"
+                    FontWeight="Bold" />
+        </StackPanel>
+        <Grid Grid.Column="1"
+              Grid.Row="2"
+              Height="auto"
+              Width="auto">
+            <DataGrid Name="DataGridPlayers"
+                      ItemsSource="{Binding userList, UpdateSourceTrigger=PropertyChanged}"
+                      SelectedItem="{Binding viewUser, UpdateSourceTrigger=PropertyChanged}"
+                      IsReadOnly="True"
+                      HeadersVisibility="Column"
+                      AutoGenerateColumns="False"
+                      HorizontalGridLinesBrush="Black"
+                      BorderBrush="Black"
+                      Foreground="Black"
+                      FontWeight="Bold"
+                      Margin="20">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Fullname"
+                                        Binding="{Binding fullname}" />
+                    <DataGridTextColumn Header="Date of birth"
+                                        Binding="{Binding dateOfBirth}" />
+                    <DataGridTextColumn Header="Identity Card"
+                                        Binding="{Binding IdentityCardNumber}" />
+                    <DataGridTextColumn Header="JMBG"
+                                        Binding="{Binding jmbg}" />
+                    <DataGridTextColumn Header="Gender"
+                                        Binding="{Binding genderName}" />
+                    <DataGridTextColumn Header="Phone"
+                                        Binding="{Binding phone}" />
+                    <DataGridTextColumn Header="Location"
+                                        Binding="{Binding location}" />
+                    <DataGridTextColumn Header="Sector"
+                                        Binding="{Binding sectorName}" />
+                    <DataGridTextColumn Header="Manager"
+                                        Binding="{Binding manager}" />
+                    <!--<DataGridTemplateColumn>
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Name="btnDelete"
+                                        Content="Delete"
+                                        Command="{Binding Path=DataContext.deleteThisUser, RelativeSource= {RelativeSource FindAncestor,
+                                       AncestorType={x:Type DataGrid}}, UpdateSourceTrigger=PropertyChanged}"
+                                        Margin="4"
+                                        FontWeight="Bold" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn>
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Name="btnEdit"
+                                        Content="Edit"
+                                        Command="{Binding Path=DataContext.editThisUser, RelativeSource= {RelativeSource FindAncestor,
+                                       AncestorType={x:Type DataGrid}}, UpdateSourceTrigger=PropertyChanged}"
+                                        Margin="4"
+                                        FontWeight="Bold" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>-->
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
     </Grid>
 </Window>
