--- a/DAN_XLII_Andreja_Kolesar/View/AddAndEditEmployeeWindow.xaml
+++ b/DAN_XLII_Andreja_Kolesar/View/AddAndEditEmployeeWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:Validation="clr-namespace:DAN_XLII_Andreja_Kolesar.Validation"
         mc:Ignorable="d"
         Title="AddAndEditEmployeeWindow"
-        Height="450"
+        Height="500"
         Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -106,21 +106,40 @@
                  Height="20"
                  Text="{Binding newEmployee.fullname, UpdateSourceTrigger=PropertyChanged}"
                  Grid.ColumnSpan="4"
-                 Margin="0,1,-65,1" />
-        <TextBox Grid.Column="3"
+                 Margin="0,1,-170,1" />
+        
+        <!--<TextBox Grid.Column="3"
                  Grid.Row="3"
                  Name="txtDateOfBirth"
                  Height="20"
                  Text="{Binding newEmployee.dateOfBirth, UpdateSourceTrigger=PropertyChanged}"
                  Grid.ColumnSpan="4"
-                 Margin="0,0,-65,2" />
+                 Margin="0,0,-170,2" />-->
+        <TextBox Validation.ErrorTemplate="{StaticResource textBoxErrorTemplate}"
+                 Grid.Column="3"
+                 Grid.Row="3"
+                 Name="txtDateOfBirth"
+                 Height="20"
+                 Grid.ColumnSpan="4"
+                 Margin="0,1,-170,1">
+            <TextBox.Text>
+                <Binding Path="newEmployee.dateOfBirth"
+                         UpdateSourceTrigger="PropertyChanged"
+                         ValidatesOnDataErrors="True"
+                         NotifyOnValidationError="True">
+                    <Binding.ValidationRules>
+                        <Validation:ValidDateOfBirth />
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
         <TextBox Validation.ErrorTemplate="{StaticResource textBoxErrorTemplate}"
                  Grid.Column="3"
                  Grid.Row="5"
                  Name="txtIdentityCardNumber"
                  Height="20"
                  Grid.ColumnSpan="4"
-                 Margin="0,1,-65,1">
+                 Margin="0,1,-170,1">
             <TextBox.Text>
                 <Binding Path="newEmployee.IdentityCardNumber"
                          UpdateSourceTrigger="PropertyChanged"
@@ -132,21 +151,13 @@
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        
-        <!--<TextBox Grid.Column="3"
-                 Grid.Row="5"
-                 Name="txtIdentityCardNumber"
-                 Height="20"
-                 Text="{Binding newEmployee.IdentityCardNumber, UpdateSourceTrigger=PropertyChanged}"
-                 Grid.ColumnSpan="4"
-                 Margin="0,0,-65,2" />-->
         <TextBox Validation.ErrorTemplate="{StaticResource textBoxErrorTemplate}"
                  Grid.Column="3"
                  Grid.Row="7"
                  Name="txtJmbg"
                  Height="20"
                  Grid.ColumnSpan="4"
-                 Margin="0,1,-65,1">
+                 Margin="0,1,-170,1">
             <TextBox.Text>
                 <Binding Path="newEmployee.jmbg"
                          UpdateSourceTrigger="PropertyChanged"
@@ -168,21 +179,39 @@
                   ItemsSource="{Binding genderList, UpdateSourceTrigger=PropertyChanged}"
                   SelectedItem="{Binding newEmployee.getTblGender, UpdateSourceTrigger=PropertyChanged}"
                   Grid.ColumnSpan="4"
-                  Margin="0,1,-65,0" />
-        <TextBox Grid.Column="3"
+                  Margin="0,1,-170,0" />
+        <TextBox Validation.ErrorTemplate="{StaticResource textBoxErrorTemplate}"
+                 Grid.Column="3"
+                 Grid.Row="11"
+                 Name="txtPhone"
+                 Height="20"
+                 Grid.ColumnSpan="4"
+                 Margin="0,1,-170,1">
+            <TextBox.Text>
+                <Binding Path="newEmployee.phone"
+                         UpdateSourceTrigger="PropertyChanged"
+                         ValidatesOnDataErrors="True"
+                         NotifyOnValidationError="True">
+                    <Binding.ValidationRules>
+                        <Validation:ValidPhone />
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
+        <!--<TextBox Grid.Column="3"
                  Grid.Row="11"
                  Name="txtPhone"
                  Height="20"
                  Text="{Binding newEmployee.phone, UpdateSourceTrigger=PropertyChanged}"
                  Grid.ColumnSpan="4"
-                 Margin="0,0,-65,2" />
+                 Margin="0,0,-65,2" />-->
         <TextBox Grid.Column="3"
                  Grid.Row="13"
                  Name="txtSector"
                  Height="20"
                  Text="{Binding newEmployee.sectorName, UpdateSourceTrigger=PropertyChanged}"
                  Grid.ColumnSpan="4"
-                 Margin="0,0,-65,2" />
+                 Margin="0,0,-170,2" />
         
         <ComboBox Grid.Column="3"
                   Grid.Row="15"
@@ -193,7 +222,7 @@
                   ItemsSource="{Binding locationList, UpdateSourceTrigger=PropertyChanged}"
                   SelectedItem="{Binding newEmployee.getTblLocation, UpdateSourceTrigger=PropertyChanged}"
                   Grid.ColumnSpan="4"
-                  Margin="0,1,-65,0" />
+                  Margin="0,1,-170,0" />
         <ComboBox Grid.Column="3"
                   Grid.Row="17"
                   Name="cmbManager"
@@ -203,7 +232,7 @@
                   ItemsSource="{Binding managerList, UpdateSourceTrigger=PropertyChanged}"
                   SelectedItem="{Binding newEmployee.getTblManager, UpdateSourceTrigger=PropertyChanged}"
                   Grid.ColumnSpan="4"
-                  Margin="0,1,-65,0" />
+                  Margin="0,1,-170,0" />
         <!--buttons-->
         <Button Grid.Column="3"
                 Grid.Row="19"
@@ -222,6 +251,6 @@
                 Width="70"
                 HorizontalAlignment="Right"
                 Command="{Binding close, UpdateSourceTrigger=PropertyChanged}"
-                Margin="0,2,-59,3" />
+                Margin="0,2,-135,3" />
     </Grid>
 </Window>
